| Summary: | ASTERISK-30265: res_pjsip_session: Fix missing PLAR support on INVITEs | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-10-16 19:29:56 | Date Closed: | 2022-12-08 13:56:41.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_session |
| Versions: | 18.14.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Certain SIP devices if configured for PLAR will send an empty extension in the INVITE. This can lead to something like this:
{noformat} Call to extension '' rejected because extension not found in context 'orig-line-pjsip'. {noformat} This patch fixes this by mapping calls to empty extensions to s, the same way that PLAR works in chan_dahdi. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-10-16 19:29:59.935-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-12-08 13:56:42.951-0600 Change 19679 merged by Friendly Automation: res_pjsip_session.c: Map empty extensions in INVITEs to s. [https://gerrit.asterisk.org/c/asterisk/+/19679|https://gerrit.asterisk.org/c/asterisk/+/19679] By: Friendly Automation (friendly-automation) 2022-12-08 13:57:04.361-0600 Change 19417 merged by Friendly Automation: res_pjsip_session.c: Map empty extensions in INVITEs to s. [https://gerrit.asterisk.org/c/asterisk/+/19417|https://gerrit.asterisk.org/c/asterisk/+/19417] By: Friendly Automation (friendly-automation) 2022-12-09 07:53:51.175-0600 Change 19678 merged by Friendly Automation: res_pjsip_session.c: Map empty extensions in INVITEs to s. [https://gerrit.asterisk.org/c/asterisk/+/19678|https://gerrit.asterisk.org/c/asterisk/+/19678] | ||